--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,11 @@ jobs:
             ls -al
             zip -r webapp.zip webapp.py
             echo "Zip Done"
-            sudo chmod 775 DjangoApp1.zip
+            sudo chmod 775 webapp.zip
             ls -al
-      # - run:
-      #     name: Code Deployment
-      #     command: |
-      #       ls -al
-      #       aws s3 cp DjangoApp1.zip s3://codedeploy-kmvanesa-me
-      #       aws deploy create-deployment --application-name csye6225-webapp --deployment-group-name csye6225-webapp-deployment --description "CSYE6225" --region us-east-1 --s3-location bucket=codedeploy-kmvanesa-me,bundleType=zip,key=DjangoApp1.zip
+      - run:
+          name: Code Deployment
+          command: |
+            ls -al
+            aws s3 cp webapp.zip s3://codedeploy-kmvanesa-me
+          # aws deploy create-deployment --application-name csye6225-lambda --deployment-group-name csye6225-webapp-deployment --description "CSYE6225" --region us-east-1 --s3-location bucket=codedeploy-kmvanesa-me,bundleType=zip,key=DjangoApp1.zip
